--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
     "@metaplex-foundation/umi": "^0.9.2",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
+    "@solana/spl-token": "^0.4.9",
     "@solana/web3.js": "^1.95.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
